@@ -215,13 +215,13 @@ void SusyNtAna::clearObjects()
 /*--------------------------------------------------------------------------------*/
 // Select baseline and signal leptons
 /*--------------------------------------------------------------------------------*/
-void SusyNtAna::selectObjects(SusyNtSys sys, bool removeLepsFromIso, TauID signalTauID)
+void SusyNtAna::selectObjects(SusyNtSys sys, bool removeLepsFromIso, 
+                              TauID signalTauID, bool n0150BugFix)
 {
   // Get the Baseline objets
-  //getBaselineObjects(&nt, m_baseElectrons, m_baseMuons, m_baseTaus, m_baseJets, sys, m_selectTaus);
   getBaselineObjects(&nt, m_preElectrons, m_preMuons, m_preJets, 
                      m_baseElectrons, m_baseMuons, m_baseTaus, m_baseJets, 
-                     sys, m_selectTaus);
+                     sys, m_selectTaus, n0150BugFix);
 
   // Now grab Signal objects
   // New signal tau prescription, fill both ID levels at once
